redactable/tests/ui/sensitive_display_missing_template_rejected.stderr
error: missing display template: add #[error("...")] or a doc comment
 --> tests/ui/sensitive_display_missing_template_rejected.rs:4:8
  |
4 | struct LoginError {
  |        ^^^^^^^^^^
