redactable/tests/ui/sensitive_display_missing_template_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
struct LoginError {
    #[sensitive(redactable::Secret)]
    password: String,
}

fn main() {}
